# pareg

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
examples/: doc.rs  errors.rs  parsef.rs
pareg_core/: Cargo.toml
pareg_core/src/: arg_into.rs  by_ref.rs  err.rs  from_arg.rs  from_args.rs  from_read.rs  from_str2.rs  impl_all.rs  iter.rs  lib.rs  pareg_ref.rs  parsef.rs  parsers.rs  reader.rs  set_from_read.rs  starts.rs
pareg_core/src/check/: check_ref.rs  in_range.rs  in_range_i.rs  mod.rs
pareg_core/src/err/: arg_err_ctx.rs  arg_err_kind.rs  arg_error.rs  color_mode.rs  mod.rs
pareg_core/src/proc/: err.rs  from_arg.rs  from_args.rs  mod.rs  parsef.rs  utils.rs
pareg_core/src/reader/: from_read.rs  mod.rs  parsed_fmt.rs  read_fmt.rs  reader_chars.rs  reader_source.rs  set_from_read.rs  trim_side.rs
pareg_proc/: Cargo.toml
pareg_proc/src/: lib.rs
src/: arg_iterator.rs  err.rs  from_arg.rs  iter.rs  lib.rs  parsers.rs
tests/: check.rs  parsers.rs  proc.rs
