[package]
name = "pareg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pareg_core",
    "pareg_proc",
]

[dependencies]
pareg_core = { version = "0.1.0", path = "pareg_core" }
pareg_proc = { version = "0.1.0", path = "pareg_proc" }
