[package]
name = "pareg"
version = "0.11.2"
edition = "2024"
license-file = "LICENSE"
description = "Rust library with useful tools for command line argument parsing"
homepage = "https://github.com/BonnyAD9/pareg"
repository = "https://github.com/BonnyAD9/pareg"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "pareg_core",
    "pareg_proc",
]

[dependencies.pareg_core]
version = "0.11.2"
path = "pareg_core"
default-features = false

[dependencies.pareg_proc]
version = "0.11.2"
path = "pareg_proc"

[features]
default = ["color-auto-stderr"]
color-auto-stderr = ["pareg_core/color-auto-stderr"]
color-auto-stdout = ["pareg_core/color-auto-stdout"]
color-never = ["pareg_core/color-never"]
color-always = ["pareg_core/color-always"]
no-anounce = ["pareg_core/no-anounce"]
