[package]
name = "pareg_core"
version = "0.3.0"
edition = "2021"
license-file = "../LICENSE"
description = "This library contains the implementation for the pareg library."
homepage = "https://github.com/BonnyAD9/pareg"
repository = "https://github.com/BonnyAD9/pareg"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
proc-macro2 = "1.0.81"
syn = "2.0.59"
quote = "1.0.36"
