[package]
name = "pareg_core"
version = "0.7.0"
edition = "2021"
license-file = "../LICENSE"
description = "This library contains the implementation for the pareg library."
homepage = "https://github.com/BonnyAD9/pareg"
repository = "https://github.com/BonnyAD9/pareg"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.11"
proc-macro2 = "1.0.93"
syn = { version = "2.0.98", features = ["full"]}
quote = "1.0.38"
termal = "2.0.0"

[features]
default = ["color-auto-stderr"]
color-auto-stderr = []
color-auto-stdout = []
color-never = []
color-always = []
