[package]
name = "pareg_core"
version = "0.10.0"
edition = "2024"
license-file = "../LICENSE"
description = "This library contains the implementation for the pareg library."
homepage = "https://github.com/BonnyAD9/pareg"
repository = "https://github.com/BonnyAD9/pareg"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimal-lexical = "0.2.1"
thiserror = "2.0.17"
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["full"]}
quote = "1.0.42"
termal = "4.1.0"

[features]
default = ["color-auto-stderr"]
color-auto-stderr = []
color-auto-stdout = []
color-never = []
color-always = []
no-anounce = []
